--- a/App/config.ini
+++ b/App/config.ini
@@ -17,3 +17,4 @@ max_size      =  "20971520"
 upload_path   =  "day"
 [可选的文件类型:参考http://www.w3school.com.cn/media/media_mimeref.asp]
 file_ext = '["image\/jpeg","image\/gif","image\/bmp","application\/zip","image\/png"]'
+domain = "https://image.fantuanpu.com"
